--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ html, body {
     border-radius: 6px;
     position: relative;
     left: 50%;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
     transform: translateX(-50%);
     transition: opacity 0.5s ease-in-out;
     margin-bottom: 100px;
