--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ html, body {
     top: 26px;
     right: 50px;
     background-color: #0545ac;
+    color: white;
     border: none;
     border-radius: 6px;
     cursor: pointer;
