--- a/style.css
+++ b/style.css
@@ -135,31 +135,6 @@ input:focus {
     box-shadow: 4px 4px 1px 1px #ECF3FF;
 }
 
-
-button {
-    padding: 8px 14px;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: bold;
-    transition: background 0.3s;
-    margin: 0;
-    min-width: 150px;
-    text-align: center;
-}
-
-.button-group {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    width: 100%;
-    max-width: 500px;
-    margin: 20px auto;
-}
-
-
 .output-container {
     display: flex;
     align-items: center;
@@ -310,4 +285,47 @@ button {
         height: 24px;
         position: relative;
     }
+}
+
+.button-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 buttons per row */
+    gap: 15px;
+    width: 90%;
+    max-width: 700px;
+    margin: 30px auto;
+}
+
+.button-grid button {
+    padding: 6px;
+    font-size: 11px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 500;
+    text-align: center;
+    line-height: 1.3;
+    border-radius: 6px;
+    border: 1px solid #D1D5DB;
+    background-color: transparent;
+    color: #031026;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: background 0.2s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 70px;
+}
+
+.button-grid button span {
+    font-size: 16px; 
+    margin-bottom: -10px;
+}
+
+.button-grid button:hover {
+    background-color: #f4f9ff; 
+}
+
+.button-grid button.selected {
+    background-color: #ECF3FF; 
 }
