--- a/style.css
+++ b/style.css
@@ -159,6 +159,9 @@ input:focus {
 .output-container p {
     flex-grow: 1;
     overflow: hidden;
+    background-color: white;
+    border-color: white;
+    border: solid 1px;
     text-overflow: ellipsis;
     white-space: nowrap;
     max-width: calc(100% - 30px);
