--- a/style.css
+++ b/style.css
@@ -146,11 +146,10 @@ input:focus {
     margin-top: 40px;
     margin-bottom: 40px;
     text-align: center;
-    font-size: 12px;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
+    font-size: 13px;
     white-space: normal;
     max-width: 65%;
+    margin-top: 50px;
     overflow: hidden;
     margin-left: auto;  
     margin-right: auto; 
