--- a/style.css
+++ b/style.css
@@ -1,30 +1,39 @@
 .header {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     background-color: #002332;
-    padding: 32px 40px;
+    padding: 31.9px 40px;
     position: fixed;
     width: 100%;
     top: 0;
-    left: 0;
+    left: 50%;
+    transform: translateX(-50%);
     z-index: 1000;
     transition: transform 0.3s ease-in-out;
 }
 
 .header.hidden {
-    transform: translateY(-150%);
+    transform: translate(-50%, -150%);
 }
 
 .logo {
-    height: 40px;
-    width: auto;
+    max-width: 5.79%;
+    height: auto;
+    margin-right: 957px;
 }
+
 
 .nav {
     display: flex;
+    justify-content: center;
     align-items: center;
     gap: 40px;
+    width: auto;
+    position: absolute;
+    left: 58%;
+    transform: translateX(-50%);
+    white-space: nowrap;
 }
 
 .nav a {
@@ -38,9 +47,9 @@
 }
 
 .nav a:hover {
-    color: #d3d3d3;
-}
+    color: #d3d3d3;    
 
+}
 
 body {
     margin-top: 150px;
